[project]
name = "nmf-project"
version = "0.1.0"
description = ""
authors = [
    {name = "itsaboutarman",email = "armansalehi82@aut.ac.ir"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "numpy (>=2.4.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
